Date	Added
12/23
        * Changed pc_alive_timer to use map_id2sd - should be more accurate [celest]
        * Added jA 1084's fix to mob.c - check whether the player is still alive
          when calculating exp [celest]
        * Added clif_changed_dir, clif_adopt_process [celest]
        * updated Backstab to show the target's new direction [celest]
        * Corrected the file types of several files in the SVN tree to
          fix the newline issues [MouseJstr]
	* Updated mapflags (added missing payon_in03,ayo_in01,ayo_in02, que_god01, que_god02) [Lupus]
        * Updated Sacrifice : it's now self-activating, and lasts for 5 attacks [celest]
        * Fixed compile errors in party.c [celest]
        * Moved SC_EDP back to 114 [celest]
        * Added some of Shinomori's fixes [celest]
        * Added optimisation in intif_parse_WisMessage from Freya [celest]

12/22
	* Eliminated skill tree mapping since we have entries
	  for all the classes in the skill_tree.txt files  [MouseJstr]
        * Added finding_ore_rate to battle_athena.conf, thanks to orn [celest]
	* Changed how party exp is passed out to eliminate players
	  current in a chat window or those who havn't moved or attacked
	  in 2 minutes [MouseJstr]
	* Fixed a bug in resnametable from local directories,
	  by fixing a bug in grfio_read causing memory corruptions [MouseJstr]
        * Rearranged how guild messages, gm messages, and party messages
          are moved back and forth between the inter server and the
          map server.. eliminating unneeded round trips to eliminate
          lag on a loaded char-server.  [MouseJstr]

            src\char_sql\int_party.c src\char_sql\int_guild.c
            src\char_sql\inter.c src\map\atcommand.c src\map\guild.c
            src\map\intif.c src\map\party.c src\char\int_guild.c
            src\char\inter.c src\char\int_party.c 

	* Reverted npc.c back to before jA 1081. This fixes warp portals missing and other npc bugs [Ajarn]